# BiopTort

./: .gitignore  BiopTort.py  Dockerfile  README.md  average_time.py  grade_analysis2.ipynb  new_line_def_approach.ipynb  non_inferiority_tests.ipynb  pyproject.toml  remove_intersections.ipynb  slide_level_agreement.ipynb  snake_post_processing.ipynb  stats.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml
bioptort/: __main__.py  _version.py  analysis.r  collect_usable_tissue_masks.py  confusion_matrices.py  grade_analysis.ipynb  mask_utils.py  optimize_gauss.sh  svs2png.py
bioptort/analysis/: algorithm_demo.ipynb  average_time.py  binary_task_concordance.ipynb  confusion_matrices.py  constants.py  grade_distribution_histograms.ipynb  insufficient_tissue.ipynb  overlay_scale_on_slide.py  recut_decision_consensus.ipynb  slide_level_agreement.ipynb  weighted_kappa.ipynb
bioptort/prototyping/: length_measurement.ipynb  line_def_approach.ipynb  multi_section_support.ipynb  test_generate_mask.ipynb
